@@ -1,6 +1,7 @@
 BUILT_SOURCES = \
         config.h sigscheme-stdint.h \
-        config-old.h scmint.h global.h encoding.h sigscheme.h \
+        config-old.h scmint.h global.h encoding.h encoding-dummy.h \
+        sigscheme.h \
         storage-common.h storage-fatty.h storage-compact.h
 
 config.h: $(top_builddir)/src/config.h
@@ -19,6 +20,9 @@ global.h: $(top_srcdir)/src/global.h
 	rm -f $@
 	$(LN_S) $< $@
 encoding.h: $(top_srcdir)/src/encoding.h
+	rm -f $@
+	$(LN_S) $< $@
+encoding-dummy.h: $(top_srcdir)/src/encoding-dummy.h
 	rm -f $@
 	$(LN_S) $< $@
 sigscheme.h: $(top_srcdir)/src/sigscheme.h
