@@ -245,6 +245,8 @@ endif
 if USE_MULTIBYTE_CHAR
   pkginclude_HEADERS += encoding.h
   libsscm_la_SOURCES += encoding-config.h encoding.c
+else
+  pkginclude_HEADERS += encoding-dummy.h
 endif
 if USE_FORMAT
   libsscm_la_SOURCES += format.c
