@@ -69,6 +69,8 @@
 #include "sigschemeinternal.h"
 #if SCM_USE_MULTIBYTE_CHAR
 #include "encoding.h"
+#else
+#include "encoding-dummy.h"
 #endif
 
 /*=======================================
