@@ -44,7 +44,11 @@
 #include "sigscheme-stdint.h"
 #include "scmint.h"
 #include "global.h"
+#if SCM_USE_MULTIBYTE_CHAR
 #include "encoding.h"
+#else
+#include "encoding-dummy.h"
+#endif
 
 #ifdef __cplusplus
 extern "C" {
